--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-transitions": "^1.0.12",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
